--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "next-auth": "^4.22.3",
+    "next-images": "^1.8.5",
+    "next-link": "^2.0.0",
     "prettier": "^3.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
